# dname

./: .gitignore  Alicefile  CMakeLists.txt  Dockerfile  README.md  configure  run-dname  run-example  run-install  run-names
builder/: Alicefile  Dockerfile
dname/: .gitignore  Makefile  dname  dname.c
examples/: Makefile  welcome  welcome.c
include/: dname.h  name.h
src/: bijective.c  bijective.h  dname.c  linux.c  linux.h  name.c  names.c  names.h  version.c  version.h
